# bre_web

./: app.py  data_classes.py  dbsearch.py  main.py  package-lock.json  package.json  pages.py  pyproject.toml  requirements.txt  tailwind.config.js
static/src/: input.css
templates/: base.html  index.html  search.html  segments.html
templates/partials/: pagination.html  search_table.html  segment_table.html
website/: __init__.py  app.py  tailwind.config.js
website/static/js/: app.js
website/templates/: base.html  browse.html  index.html
website/templates/partials/: modal.html  navbar.html  pagination-bottom.html  pagination-top.html  sidebar.html  table.html
